# pirate

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.github/workflows/: qol.yaml
docs/: index.md
docs/API References/Data/: base.md  passages.md
docs/api/data/: queries.md
docs/blog/: .authors.yml
docs/blog/posts/: mining-triples.md
docs/docs/: index.md
docs/docs/data/: passages.md  queries.md  ranking.md  triples.md
pirate/chains/: base.py  mine_chain.py
pirate/data/: __init__.py  base.py  passages.py  queries.py  ranking.py  triple.py  triples.py
pirate/miner/: base.py  hard.py  hard_neg.py  in_batch.py  in_batch_neg.py  score_thresh_neg.py
pirate/miner/synthetic/: deep.py  miner.py  shallow.py  signatures.py
pirate/models/: __init__.py  chains.py  mining.py  types.py
pirate/retrievers/: __init__.py  base.py  bi_encoder.py  bm25.py  cross_encoder.py
tests/data/: test_passages.py  test_queries.py  test_rankings.py  test_triples.py
tests/fixtures/passages/: sample_passage.csv  sample_passage.jsonl
tests/fixtures/queries/: sample_query.csv  sample_query.jsonl
tests/fixtures/rankings/: sample_ranking.csv  sample_ranking.jsonl
tests/fixtures/triples/: sample_triple.csv  sample_triple.jsonl
tests/miners/: test_hard_neg.py  test_in_batch.py
tests/retrievers/: test_bm25.py
